# async-dramatiq

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint_and_test.yml
async_dramatiq/: __init__.py  actors.py  worker.py
async_dramatiq/backends/: __init__.py
examples/worker_heartbeat/: Dockerfile  README.md  cli.py  docker-compose.yaml  pyproject.toml  run.sh  run_scheduler.py
examples/worker_heartbeat/worker_heartbeat/: config.py  tasks.py  worker.py
scripts/: format.sh  init.sh  lint.sh
src/: docker-compose.yaml
src/async_dramatiq/: __init__.py  actor.py  actors.py  config.py  scheduler.py  types.py  worker.py
src/async_dramatiq/backends/: __init__.py  async_redis.py  async_stub.py
src/async_dramatiq/middleware/: __init__.py  async_base.py  async_stub.py
src/tests/: conftest.py  test_actors.py  test_backends.py  test_scheduler.py  test_workers.py
tests/: conftest.py  test_actors.py  test_backends.py  test_scheduler.py  test_workers.py
tests/middleware/: test_async_base.py
