[tool.poetry]
name = "worker-heartbeat-example"
version = "0.1.0"
description = "Example of a worker heartbeat."
authors = ["Ryan Houlihan <ryan@rhoulihan.com>"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "worker_heartbeat" }]

[tool.poetry.dependencies]
python = "^3.11"
async-dramatiq = "^0.1.5"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
